[metadata]
name = symcad
description = A symbolic part manipulation library with hooks into FreeCAD
long_description = file: README.md
long_description_content_type = text/markdown
author = Will Hedgecock
author_email = ronald.w.hedgecock@vanderbilt.edu
maintainer = Will Hedgecock
maintainer_email = ronald.w.hedgecock@vanderbilt.edu
license = GPL 3
license_file = LICENSE
url = https://github.com/SymBench/SymCAD
project_urls =
   Bug Tracker = https://github.com/SymBench/SymCAD/issues
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent
readme = README.md
platform = OS Independent

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.8, <4
setup_requires =
   setuptools
   wheel

[options.packages.find]
where = src
